sidebar design complete / dark mode correction in progress

--- a/apps/main-ui/src/app/index.css
+++ b/apps/main-ui/src/app/index.css
@@ -149,6 +149,9 @@ h6 {
 .flex {
   display: flex !important;
 }
+.d-none {
+  display: none !important;
+}
 
 .alignCenter {
   align-items: center !important;
